--- a/photography.html
+++ b/photography.html
@@ -64,8 +64,8 @@
             </article>
         </section>
     </main>
-    <script src="../js/loaded.js"></script>
-    <script src="../js/navigation.js"></script>r
+    <script src="/js/loaded.js"></script>
+    <script src="/js/navigation.js"></script>r
 </body>
 
 </html>
