--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Light & Shadow museum</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/sponsor.css">
-  <link rel="stylesheet" href="./css/rotate.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/sponsor.css">
+  <link rel="stylesheet" href="/css/rotate.css">
 </head>
 
 <body>
