--- a/home.html
+++ b/home.html
@@ -171,8 +171,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/loaded.js"></script>
-  <script src="../js/navigation.js"></script>
+  <script src="/js/loaded.js"></script>
+  <script src="/js/navigation.js"></script>
 </body>
 
 </html>
