--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About page</title>
-    <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/about.css">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="/css/nav.css">
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 
 <body>
@@ -96,8 +95,8 @@
                 Closed on Public Holidays</p>
         </section>
     </main>
-    <script src="../js/loaded.js"></script>
-    <script src="../js/navigation.js"></script>
+    <script src="/js/loaded.js"></script>
+    <script src="/js/navigation.js"></script>
 
 </body>
 
