--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="../js/preloader.js"></script>
+    <script src="/js/preloader.js"></script>
 
 </html>
