--- a/photography.html
+++ b/photography.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
-     <link rel="stylesheet" href="/css/styleslider.css">
-    <link rel="stylesheet" href="/css/style.css">
+     <link rel="stylesheet" href="../css/styleslider.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -62,8 +62,8 @@
             </article>
         </section>
     </main>
-    <script src="./js/loaded.js"></script>
-    <script src="./js/navigation.js"></script>r
+    <script src="/js/loaded.js"></script>
+    <script src="/js/navigation.js"></script>r
 </body>
 
 </html>
