--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/preloader.css">
+    <link rel="stylesheet" href="/css/preloader.css">
     <title>Loading Screen</title>
 </head>
 
@@ -49,6 +49,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="../js/preloader.js"></script>
+    <script src="/js/preloader.js"></script>
 
 </html>
