--- a/exhibition.html
+++ b/exhibition.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/exhibition.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="./css/exhibition.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/nav.css">
   <title>Exhibition</title>
 </head>
 
@@ -89,8 +89,8 @@
       </div>
     </div>
   </main>
-  <script src="/js/loaded.js"></script>
-  <script src="/js/navigation.js"></script>
+  <script src="./js/loaded.js"></script>
+  <script src="./js/navigation.js"></script>
 </body>
 
 </html>
