--- a/photography.html
+++ b/photography.html
@@ -29,35 +29,35 @@
                 <p>London</p>
                 <p>1234AB<br>Upsidedown soda</p>
             </div>
-            <img class="image" src="../images/banner.png" alt="silky background">
+            <img class="image" src="./images/banner.png" alt="silky background">
         </section>
 
         <section>
             <article>
-                <figure style="--position: 1"><img src="../images/slider1.jpg"
+                <figure style="--position: 1"><img src="./images/slider1.jpg"
                         alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
                 </figure>
-                <figure style="--position: 2"><img src="../images/slider2.jpg"
+                <figure style="--position: 2"><img src="./images/slider2.jpg"
                         alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
                 </figure>
-                <figure style="--position: 3"><img src="../images/slider3.jpg"
+                <figure style="--position: 3"><img src="./images/slider3.jpg"
                         alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
                 </figure>
-                <figure style="--position: 4"><img src="../images/slider4.jpg"
+                <figure style="--position: 4"><img src="./images/slider4.jpg"
                         alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
                 </figure>
-                <figure style="--position: 5"><img src="../images/slider5.jpg"
+                <figure style="--position: 5"><img src="./images/slider5.jpg"
                         alt="Photograph of two people running through a museum"></figure>
-                <figure style="--position: 6"><img src="../images/slider6.jpg"
+                <figure style="--position: 6"><img src="./images/slider6.jpg"
                         alt="Photograph of two people sitting down blindfolded, entangled in each other"></figure>
                 <figure style="--position: 7"><img src="../images/slider7.jpg"
                         alt="Photograph close up of the face of a girl and a guy having an intimate moment">
                 </figure>
-                <figure style="--position: 8"><img src="../images/slider8.jpg"
+                <figure style="--position: 8"><img src="./images/slider8.jpg"
                         alt="Photograph outside of two people standing against the wall during rainfall"></figure>
-                <figure style="--position: 9"><img src="../images/slider9.jpg"
+                <figure style="--position: 9"><img src="./images/slider9.jpg"
                         alt="Photograph of two people holding hands in the underground"></figure>
-                <figure style="--position: 10"><img src="../images/slider10.jpg"
+                <figure style="--position: 10"><img src="./images/slider10.jpg"
                         alt="Photograph of two people holding hands in the underground"></figure>
             </article>
         </section>
