--- a/home.html
+++ b/home.html
@@ -32,69 +32,69 @@
         <p>London</p>
         <p>1234AB<br>Upsidedown soda</p>
       </div>
-      <img class="image" src="../images/banner.png" alt="silky background">
+      <img class="image" src="./images/banner.png" alt="silky background">
     </section>
 
     <div class="slider" style="--width: 100px; --height: 50px; --quantity: 9;">
       <div class="list">
-        <div class="item" style="--position: 1"><img src="../images/sponsor0.png" alt="Ing bank logo"></div>
-        <div class="item" style="--position: 2"><img src="../images/sponsor1.png" alt="Heineken beer logo"></div>
-        <div class="item" style="--position: 3"><img src="../images/sponsor2.png" alt="Tomtom navigation systems logo">
+        <div class="item" style="--position: 1"><img src="./images/sponsor0.png" alt="Ing bank logo"></div>
+        <div class="item" style="--position: 2"><img src="./images/sponsor1.png" alt="Heineken beer logo"></div>
+        <div class="item" style="--position: 3"><img src="./images/sponsor2.png" alt="Tomtom navigation systems logo">
         </div>
-        <div class="item" style="--position: 4"><img src="../images/sponsor3.png" alt="Randstad employment agency logo">
+        <div class="item" style="--position: 4"><img src="./images/sponsor3.png" alt="Randstad employment agency logo">
         </div>
-        <div class="item" style="--position: 5"><img src="../images/sponsor4.png" alt="Odido phone provider logo"></div>
-        <div class="item" style="--position: 6"><img src="../images/sponsor5.png" alt="Golden Tulip hotels logo"></div>
-        <div class="item" style="--position: 7"><img src="../images/sponsor6.png" alt="Arriva public transport logo">
+        <div class="item" style="--position: 5"><img src="./images/sponsor4.png" alt="Odido phone provider logo"></div>
+        <div class="item" style="--position: 6"><img src="./images/sponsor5.png" alt="Golden Tulip hotels logo"></div>
+        <div class="item" style="--position: 7"><img src="./images/sponsor6.png" alt="Arriva public transport logo">
         </div>
-        <div class="item" style="--position: 8"><img src="../images/sponsor7.png" alt="Action non-food discounter logo">
+        <div class="item" style="--position: 8"><img src="./images/sponsor7.png" alt="Action non-food discounter logo">
         </div>
-        <div class="item" style="--position: 9"><img src="../images/sponsor8.png"
+        <div class="item" style="--position: 9"><img src="./images/sponsor8.png"
             alt="Booking.com online travel agency logo"></div>
       </div>
     </div>
 
     <div class="slider" style="--width: 200px; --height: 200px; --quantity: 9;">
       <div class="list">
-        <div class="item" style="--position: 1"><img src="../images/sponsor0.png" alt="Ing bank logo"></div>
-        <div class="item" style="--position: 2"><img src="../images/sponsor1.png" alt="Heineken beer logo"></div>
-        <div class="item" style="--position: 3"><img src="../images/sponsor2.png" alt="Tomtom navigation systems logo">
+        <div class="item" style="--position: 1"><img src="./images/sponsor0.png" alt="Ing bank logo"></div>
+        <div class="item" style="--position: 2"><img src="./images/sponsor1.png" alt="Heineken beer logo"></div>
+        <div class="item" style="--position: 3"><img src="./images/sponsor2.png" alt="Tomtom navigation systems logo">
         </div>
-        <div class="item" style="--position: 4"><img src="../images/sponsor3.png" alt="Randstad employment agency logo">
+        <div class="item" style="--position: 4"><img src="./images/sponsor3.png" alt="Randstad employment agency logo">
         </div>
-        <div class="item" style="--position: 5"><img src="../images/sponsor4.png" alt="Odido phone provider logo"></div>
-        <div class="item" style="--position: 6"><img src="../images/sponsor5.png" alt="Golden Tulip hotels logo"></div>
-        <div class="item" style="--position: 7"><img src="../images/sponsor6.png" alt="Arriva public transport logo">
+        <div class="item" style="--position: 5"><img src="./images/sponsor4.png" alt="Odido phone provider logo"></div>
+        <div class="item" style="--position: 6"><img src="./images/sponsor5.png" alt="Golden Tulip hotels logo"></div>
+        <div class="item" style="--position: 7"><img src="./images/sponsor6.png" alt="Arriva public transport logo">
         </div>
-        <div class="item" style="--position: 8"><img src="../images/sponsor7.png" alt="Action non-food discounter logo">
+        <div class="item" style="--position: 8"><img src="./images/sponsor7.png" alt="Action non-food discounter logo">
         </div>
-        <div class="item" style="--position: 9"><img src="../images/sponsor8.png"
+        <div class="item" style="--position: 9"><img src="./images/sponsor8.png"
             alt="Booking.com online travel agency logo"></div>
       </div>
     </div>
 
     <section class="banner">
       <div class="product">
-        <div class="soda" style="--url: url(../images/soda-art.png)"
+        <div class="soda" style="--url: url(./images/soda-art.png)"
           aria-label="Beer label for 'Shaddok American IPA' by Alternative Brewery. Tropical theme with a bearded man slicing grapefruit, island sunset, and hummingbirds.">
         </div>
-        <div class="soda" style="--url: url(../images/soda-art-2.png)"
+        <div class="soda" style="--url: url(./images/soda-art-2.png)"
           aria-label="Beer label for 'Sotaque Sour Ale' by Alternative Brewery. Features a green-skinned woman with tribal art, fruits, and plants.">
         </div>
       </div>
       <div class="rock">
-        <img src="../images/rock1.png" alt="">
-        <img src="../images/rock2.png" alt="">
-        <img src="../images/rock3.png" alt="">
+        <img src="./images/rock1.png" alt="">
+        <img src="./images/rock2.png" alt="">
+        <img src="./images/rock3.png" alt="">
       </div>
     </section>
 
     <section class="grid grid-1">
       <figure>
-        <img src="../images/barbedwire.png" alt="barbed wire">
+        <img src="./images/barbedwire.png" alt="barbed wire">
       </figure>
       <figure>
-        <img src="../images/abstractspike.png"
+        <img src="./images/abstractspike.png"
           alt=""
           class="autoRotate">
       </figure>
@@ -104,7 +104,7 @@
     <section class="grid grid-2">
       <div class="autoShow">
         <figure>
-          <img src="../images/barcode.png" alt="">
+          <img src="./images/barcode.png" alt="">
         </figure>
         <p>
           The Light and Shadow Museum is a captivating destination dedicated to the art and science of illumination and
@@ -125,7 +125,7 @@
       </div>
       <div class="autoShow">
         <figure>
-          <img src="../images/crown.png" alt="">
+          <img src="./images/crown.png" alt="">
         </figure>
         <p>
           The Light and Shadow Museum also hosts workshops, lectures, and night-time events, creating a vibrant
@@ -135,7 +135,7 @@
       </div>
       <div class="autoShow">
         <figure>
-          <img src="../images/candy.png" alt="">
+          <img src="./images/candy.png" alt="">
         </figure>
       </div>
     </section>
@@ -166,7 +166,7 @@
         an experience that continues to resonate long after the visit ends.</div>
       <div>
         <figure>
-          <img src="../images/barbedwire2.png" alt="">
+          <img src="./images/barbedwire2.png" alt="">
         </figure>
       </div>
     </div>
