--- a/exhibition.html
+++ b/exhibition.html
@@ -28,64 +28,64 @@
     <h1>Exhibition</h1>
     <div class="columns">
       <div class="column column-reverse">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
-        <img src="../images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
       </div>
       <div class="column">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
-        <img src="../images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
       </div>
       <div class="column column-reverse">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
-        <img src="../images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
-        <img src="../images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
-        <img src="../images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
-        <img src="../images/slider5.jpg" alt="Photograph of two people running through a museum">
-        <img src="../images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
-        <img src="../images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
-        <img src="../images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
+        <img src="./images/slider9.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider10.jpg" alt="Photograph of two people holding hands in the underground">
+        <img src="./images/slider1.jpg" alt="Photograph taken from the bottom of a glass platform, through which you can now see people standing">
+        <img src="./images/slider2.jpg" alt="Photograph close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider3.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider4.jpg" alt="Photographed close up of the side profile, you can see the collarbone neck and the bottom part of the face">
+        <img src="./images/slider5.jpg" alt="Photograph of two people running through a museum">
+        <img src="./images/slider6.jpg" alt="Photograph of two people sitting down blindfolded, entangled in each other">
+        <img src="./images/slider7.jpg" alt="Photograph close up of the face of a girl and a guy having an intimate moment">
+        <img src="./images/slider8.jpg" alt="Photograph outside of two people standing against the wall during rainfall">
       </div>
     </div>
   </main>
