--- a/photography.html
+++ b/photography.html
@@ -50,7 +50,7 @@
                         alt="Photograph of two people running through a museum"></figure>
                 <figure style="--position: 6"><img src="./images/slider6.jpg"
                         alt="Photograph of two people sitting down blindfolded, entangled in each other"></figure>
-                <figure style="--position: 7"><img src="../images/slider7.jpg"
+                <figure style="--position: 7"><img src="./images/slider7.jpg"
                         alt="Photograph close up of the face of a girl and a guy having an intimate moment">
                 </figure>
                 <figure style="--position: 8"><img src="./images/slider8.jpg"
