--- a/home.html
+++ b/home.html
@@ -75,10 +75,10 @@
 
     <section class="banner">
       <div class="product">
-        <div class="soda" style="--url: url(./images/soda-art.png)"
+        <div class="soda" style="--url: url(/images/soda-art.png)"
           aria-label="Beer label for 'Shaddok American IPA' by Alternative Brewery. Tropical theme with a bearded man slicing grapefruit, island sunset, and hummingbirds.">
         </div>
-        <div class="soda" style="--url: url(./images/soda-art-2.png)"
+        <div class="soda" style="--url: url(/images/soda-art-2.png)"
           aria-label="Beer label for 'Sotaque Sour Ale' by Alternative Brewery. Features a green-skinned woman with tribal art, fruits, and plants.">
         </div>
       </div>
